Livewire client search implemented

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -7,4 +7,71 @@
     padding:0px 15px;
   }
 
+  .my-btn-blue {
+    background-color: #0000;
+    border: none;
+    
+    transition: 0.3s;
+  }
   
+  .my-btn-blue:hover {
+    background-color: #3490DC;
+    color: white;
+  }
+
+  .my-btn-orange {
+    background-color: #0000;
+    border: none;
+    
+    transition: 0.3s;
+  }
+  
+  .my-btn-orange:hover {
+    background-color: #FD6400;
+    color: white;
+  }
+
+.cssload-container {
+	width: 25%;
+	height: 24px;
+  text-align: center;
+  margin-top: 5px;
+    vertical-align:middle;
+}
+
+.cssload-speeding-wheel {
+	width: 24px;
+	height: 24px;
+	margin: 0 auto;
+	border: 1px solid rgb(0,0,0);
+	border-radius: 50%;
+	border-left-color: transparent;
+	border-right-color: transparent;
+	animation: cssload-spin 575ms infinite linear;
+		-o-animation: cssload-spin 575ms infinite linear;
+		-ms-animation: cssload-spin 575ms infinite linear;
+		-webkit-animation: cssload-spin 575ms infinite linear;
+		-moz-animation: cssload-spin 575ms infinite linear;
+}
+
+
+
+@keyframes cssload-spin {
+	100%{ transform: rotate(360deg); transform: rotate(360deg); }
+}
+
+@-o-keyframes cssload-spin {
+	100%{ -o-transform: rotate(360deg); transform: rotate(360deg); }
+}
+
+@-ms-keyframes cssload-spin {
+	100%{ -ms-transform: rotate(360deg); transform: rotate(360deg); }
+}
+
+@-webkit-keyframes cssload-spin {
+	100%{ -webkit-transform: rotate(360deg); transform: rotate(360deg); }
+}
+
+@-moz-keyframes cssload-spin {
+	100%{ -moz-transform: rotate(360deg); transform: rotate(360deg); }
+}
