--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10889,3 +10889,61 @@ a.text-dark:focus {
   padding: 0px 15px;
 }
 
+.my-btn-blue {
+  background-color: #0000;
+  border: none;
+  transition: 0.3s;
+}
+
+.my-btn-blue:hover {
+  background-color: #3490DC;
+  color: white;
+}
+
+.my-btn-orange {
+  background-color: #0000;
+  border: none;
+  transition: 0.3s;
+}
+
+.my-btn-orange:hover {
+  background-color: #FD6400;
+  color: white;
+}
+
+.cssload-container {
+  width: 25%;
+  height: 24px;
+  text-align: center;
+  margin-top: 5px;
+  vertical-align: middle;
+}
+
+.cssload-speeding-wheel {
+  width: 24px;
+  height: 24px;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 50%;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  animation: cssload-spin 575ms infinite linear;
+  -o-animation: cssload-spin 575ms infinite linear;
+  -ms-animation: cssload-spin 575ms infinite linear;
+  -webkit-animation: cssload-spin 575ms infinite linear;
+  -moz-animation: cssload-spin 575ms infinite linear;
+}
+
+@keyframes cssload-spin {
+  100% {
+    transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes cssload-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
