--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -7,8 +7,17 @@
     padding:0px 15px;
   }
 
+
+  /*! Navbar buttons effect*/
   .my-btn-blue {
     background-color: #0000;
+    border: none;
+    
+    transition: 0.3s;
+  }
+
+  .my-btn-blue-active {
+    background-color: #3490DC;
     border: none;
     
     transition: 0.3s;
@@ -25,11 +34,22 @@
     
     transition: 0.3s;
   }
+
+  .my-btn-orange-active {
+    background-color: #FD6400;
+    border: none;
+    
+    transition: 0.3s;
+  }
+  
   
   .my-btn-orange:hover {
     background-color: #FD6400;
     color: white;
   }
+/*! End of Navbar buttons effect*/
+
+/*! Custom loading spinner */
 
 .cssload-container {
 	width: 25%;
@@ -75,3 +95,5 @@
 @-moz-keyframes cssload-spin {
 	100%{ -moz-transform: rotate(360deg); transform: rotate(360deg); }
 }
+
+/*! End of Custom loading spinner */
